--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "video-react": "^0.15.0"
   },
   "repository": {
     "type": "git",
